nextcloud-app/nextcloud/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: nextcloud
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: nextcloud
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: bitnami/postgresql:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pg-data
          mountPath: /bitnami/postgresql
      volumes:
      - name: pg-data
        persistentVolumeClaim:
          claimName: postgres-data
